--- a/html/management.html
+++ b/html/management.html
@@ -88,9 +88,47 @@
      </div>
    </div>
    </div>
-   <div class="col-md text-md-right">
-    <small>&copy; 2024  <a>McLaren</a></small>
-  </div>
+   </div>
+
+   <hr>
+   <hr>
+   <div class="row py-4 text-muted">
+     <div class="col-md">
+       <p><strong>Weekly Newsletter</strong></p>
+       <p>We send one email every week about the current situation in our team. Exclusive valuable content you won't find anywhere else. </p>
+     </div>
+     <div class="col-md col-lg-5 ml-auto">
+       <p><strong>Stay up-to-date with McLaren</strong></p>
+       <div class="input-group">
+         <input type="text" class="form-control" placeholder="Email">
+         <span class="input-group-btn">
+           <button class="btn btn-primary" type="button">Sign up</button>
+         </span>
+       </div>
+     </div>
+   </div>
+   </hr>
+   <div class="row py-3">
+     <div class="col-md-7">
+     <ul class="nav">
+     <li class="nav-item">
+     <li class="nav-item">
+   <div class="btn-group dropup">
+     <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+       Social Media
+     </button>
+     <div class="dropdown-menu">
+       <a class="dropdown-item" href="https://www.youtube.com/@McLaren">Youtube</a>
+       <a class="dropdown-item" href="https://www.facebook.com/McLarenRacing/?locale=cs_CZ">Facebook</a>
+       <a class="dropdown-item" href="https://www.instagram.com/mclaren/">Instagram</a>
+       <a class="dropdown-item" href="https://x.com/mclarenf1?lang=cs">Twitter</a>
+     </div>
+   </div>
+     </div>
+     <div class="col-md text-md-right">
+       <small>&copy; 2024  <a>McLaren</a></small>
+     </div>
+   </div>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
 </body>
