--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
      
     </div> 
      <div class="col-lg">
-       <h3 class="mb-4"><img src="img/cc.png" height="40">McLaren F1 Team</h3>
+       <h3 class="mb-4"><img src="img/cc.png" alt="McLaren Logo" height="40">McLaren F1 Team</h3>
        <p>After our first taste of Formula 1 victory at the 1968 Belgian Grand Prix, McLaren has gone on to secure 184 grand prix wins in total and 20 World Championships.</p>
        <p>Whether it’s the F1 drivers on track, mechanics in the garage, management team on the pitwall or engineers in the MTC, we are united by bravery, ingenuity and the thrill of the chase.</p>
        
@@ -165,12 +165,13 @@
     </div>
   </div>
 </div>
-<hr>
+</hr>
 <div class="row py-3">
   <div class="col-md-7">
   <ul class="nav">
-  <li class="nav-item">
-  <li class="nav-item">
+  <li class="nav-item"></li>
+  <li class="nav-item"></li>
+  </ul>
 <div class="btn-group dropup">
   <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     Social Media
