--- a/html/schedule.html
+++ b/html/schedule.html
@@ -132,7 +132,7 @@
         <div class="card mb-3">
   <img src="../img-schedule/spain.png" class="card-img-top" height="270" alt="...">
   <div class="card-body">
-   <h4 class="card-title"><a class="nav-link disabled link-dark">SPANISH GRAND PRIX</a></h4>
+   <h4 class="card-title"><a class="nav-link active link-dark" href="https://www.mclaren.com/racing/formula-1/2024/spanish-grand-prix/">SPANISH GRAND PRIX</a></h4>
    </div>
 </div>
 </div>
@@ -175,7 +175,7 @@
 
 <div class="col-md-6 col-lg-4">
         <div class="card mb-3">
-  <img src="../img-schedule/netherlands.png" height="270" class="card-img-top" alt="Netherlands" height="270">
+  <img src="../img-schedule/netherlands.png" height="270" class="card-img-top" alt="Netherlands">
   <div class="card-body">
    <h4 class="card-title"><a class="nav-link disabled link-dark">DUTCH GRAND PRIX</a></h4>
   </div>
@@ -229,7 +229,7 @@
 
 <div class="col-md-6 col-lg-4">
         <div class="card mb-3">
-  <img src="../img-schedule/saopaulo.png" height="270" class="card-img-top" alt="SÃo Paulo" height="270">
+  <img src="../img-schedule/saopaulo.png" height="270" class="card-img-top" alt="SÃo Paulo">
   <div class="card-body">
    <h4 class="card-title"><a class="nav-link disabled link-dark">SÃO PAULO GRAND PRIX</a></h4>
   </div>
@@ -264,9 +264,44 @@
 </div>
 
  </div>
- <div class="col-md text-md-right">
+ <hr>
+<div class="row py-4 text-muted">
+  <div class="col-md">
+    <p><strong>Weekly Newsletter</strong></p>
+    <p>We send one email every week about the current situation in our team. Exclusive valuable content you won't find anywhere else. </p>
+  </div>
+  <div class="col-md col-lg-5 ml-auto">
+    <p><strong>Stay up-to-date with McLaren</strong></p>
+    <div class="input-group">
+      <input type="text" class="form-control" placeholder="Email">
+      <span class="input-group-btn">
+        <button class="btn btn-primary" type="button">Sign up</button>
+      </span>
+    </div>
+  </div>
+</div>
+</hr>
+<div class="row py-3">
+  <div class="col-md-7">
+  <ul class="nav">
+  <li class="nav-item">
+  <li class="nav-item">
+<div class="btn-group dropup">
+  <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Social Media
+  </button>
+  <div class="dropdown-menu">
+    <a class="dropdown-item" href="https://www.youtube.com/@McLaren">Youtube</a>
+    <a class="dropdown-item" href="https://www.facebook.com/McLarenRacing/?locale=cs_CZ">Facebook</a>
+    <a class="dropdown-item" href="https://www.instagram.com/mclaren/">Instagram</a>
+    <a class="dropdown-item" href="https://x.com/mclarenf1?lang=cs">Twitter</a>
+  </div>
+</div>
+  </div>
+  <div class="col-md text-md-right">
     <small>&copy; 2024  <a>McLaren</a></small>
   </div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
